----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-03-13 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_row_delete.php renamed to tbl_row_action.php (RFE 1097729)

2005-03-12 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_structure.php, libraries/sqlparser.lib.php:
      start merging code for MySQL 4.1.2 TIMESTAMP options support

2005-03-10 Alexander M. Turek  <me@derrabus.de>
    * libraries/relation.lib.php: Bug #1159415.

2005-03-10 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php, libraries/relation.lib.php:
      problem with getting comments when creating a new table under MySQL 4.1.x
      with mysql extension

2005-03-09 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php: db comments updating broken
    * libraries/relation.lib.php: bug #1159415, data dictionary broken

2005-03-08 Michael Keck  <mkkeck@users.sourceforge.net>
    * themes/*/img/bd_insrow.png, themes/*/bd_insrow.png: Added disabled
      versions of insert-row icons.

2005-03-08 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/french update

2005-03-07 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: db comments broken
    * libraries/dbi/*.php, lang/*: new $strSocketProblem message
    * db_details.php, tbl_query_box.php, libraries/bookmark.lib.php:
      bookmark improvement, 
      based on patch #1034161 by Ryan Schmidt - ryandesign:
      sort bookmarks by label, remove the number before each bookmark
      in the drop-down choice. For this I had to change some logic in the
      calling scripts. It's still possible to have the same label more
      than once.

2005-03-07 Michal Čihař  <michal@cihar.com>
    * db_printview.php, tbl_printview.php, css/phpmyadmin.css.php,
      libraries/header_meta_style.inc.php: Actually use print style in themes,
      also fixes RFE #1120880.
    * sql.php: Better calculate inserted row id (bug #1156963).